<resources>
    <string name="app_name">Takafull</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="pleasfillname">Please fill the Your name</string>
    <string name="emialempty">Please fill the Your E-mail</string>
    <string name="emptypass">Please fill the Your  Password</string>
    <string name="failpass">Password must be matched</string>
    <string name="phoneEmpty">\"Please fill the Your  Phone Number \"</string>
    <string name="wrongPhoneNum">\"Pleas insert Valid Phone number \"</string>
    <string name="emptywork">\"Pleas Choose if you have work \"</string>
    <string name="havework">Have Work</string>
    <string name="donthavewo">\"Don\'t have work \"</string>
    <string name="checkstatus">\"Pleas set your social Status \"</string>
    <string name="goog">\"Good \"</string>
    <string name="mid">\"Mid \"</string>
    <string name="bad">\"Bad \"</string>
    <string name="loadingmssfa">Loading...!!</string>
    <string name="success"> Successfully</string>
    <string name="addMethod">Pleas your Method</string>
    <string name="emptynumber">Pleas insert number</string>
    <string name="thanksDonation">\"Thanks For your donation \"</string>
    <string name="requestsent">Your Request had been sent</string>
    <string name="fieldsRequred">All field are required</string>
    <string name="validphone">\"Pleas insert valid phone number \"</string>
    <string name="update">Updating ....</string>
    <string name="sent">The Email had been sent</string>
    <string name="validcard">Please the card number  must be 12 number</string>
    <string name="emptycardnumber">\"Please write your card number \"</string>
    <string name="validCvv">Please the CVV Code must be 4 number</string>
    <string name="emtpyCvvv">\"Please write your CVV Code \"</string>
    <string name="carddate">\"Please set end date for your card \"</string>
    <string name="namempty">Please fill the Your name</string>
    <string name="emptyIdentitiy">Pleas enter your identity</string>
    <string name="emptyage">Pleas enter your age</string>
    <string name="familynum">\"Pleas enter your family number \"</string>
    <string name="salary">\"Pleas enter your Salary \"</string>
    <string name="status">\"Pleas enter your status such as (Good,Mid,Bad) \"</string>
    <string name="jobempty">\"Pleas enter your job \"</string>
    <string name="UserNname">User name :</string>
    <string name="userAge">User age :</string>
    <string name="Useridentity">User identity :</string>
    <string name="UserSocialStatus">User Social Status :</string>
    <string name="Familynumber">Family number  :</string>
    <string name="UserSalary">User Salary :</string>
    <string name="UserPhone">User Phone :</string>
    <string name="UserJob">User Job :</string>
    <string name="dayleft">Day left</string>
    <string name="blockuser">The Users has been blocked</string>
    <string name="activednow">The user is Activated now</string>
    <string name="loading">Loading ...</string>
    <string name="deleteReq">Deleted request</string>
    <string name="MyDonations">My Donations</string>
    <string name="AdsDonation">Ads Donation</string>
    <string name="pickImage">Pleas Add Image for your Advertising</string>
    <string name="addDecs">Add description</string>
    <string name="UploadFinish">Upload Finish</string>
    <string name="Uploading">Uploading ....</string>
    <string name="EmptyImage">Empty Image</string>
    <string name="emptProg">Pleas Fill Your Profession</string>
    <string name="fillInstitutiom">Pleas Fill Name of Institution</string>
    <string name="socialAccount">Pleas Fill Social Media Account</string>
    <string name="fillAdresss">Pleas Fill Your Address</string>
    <string name="fillTitle">Pleas Fill Title</string>
    <string name="benefit">\"Pleas Fill who the Benefit \"</string>
    <string name="target">Pleas set your target</string>
    <string name="condtion">You Can\'t insert target larger than 10000</string>
    <string name="addtype">Pleas select your add type</string>



    <string name="Eamil">email</string>
    <string name="password">Password</string>
    <string name="addCard">Add Card</string>
    <string name="ChoosePayMethod">Choose method you want to pay</string>
    <string name="addMethodTitle">Add Payment Method</string>
    <string name="reqesttitle">"Requests List "</string>
    <string name="fisrt">First Name</string>
    <string name="edit">Edit Profile</string>
    <string name="last">Last Name</string>
    <string name="phonenumr">"Phone Number "</string>
    <string name="savechange">Save Changes</string>
    <string name="forget">Forget</string>
    <string name="pass">Password?</string>
    <string name="forgetpass">Enter your email associated with your account and we’ll send an email with instruction to reset your password</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="or_login_with">Or Login With</string>
    <string name="ads_requests">Ads Requests</string>
    <string name="user_benefit_form_the_ads">User Benefit form the Ads</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="beneficiary">beneficiary</string>
    <string name="donors">Donors</string>
    <string name="dont_have_account">Dont have account?</string>
    <string name="sign_in">Sign in</string>
    <string name="identity">Identity</string>
    <string name="age">Age</string>
    <string name="number_of_your_family">Number of your family</string>
    <string name="your_salary">Your Salary</string>
    <string name="create_account">Create Account</string>
    <string name="your_job">Your Job</string>
    <string name="social_status_good_mid_bad">Social Status (Good,Mid,Bad)</string>
    <string name="target_">Target :</string>
    <string name="enter_your_donation_number">Enter Your Donation Number</string>
    <string name="donate">Donate</string>
    <string name="you_are_suspended">You are Suspended</string>
    <string name="pleas_communicate_with_admin">pleas communicate with admin</string>
    <string name="dismiss">Dismiss</string>
    <string name="your_donation_has_been_succeed_and_will_be_transfered_soon_to_the_needy">Your donation has been succeed and will be transfered soon to the needy</string>
    <string name="home">Home</string>
    <string name="rimining">Rimining</string>
    <string name="payment_method">Payment Method</string>
    <string name="there_is_no_latest_activity">There is no latest activity</string>
    <string name="spread_">There is no activity right now, start donate and spread your love with others</string>
    <string name="charty">You haven’t start a charity</string>
    <string name="by_your_own">Maybe you have someone to help? Go create charity program by your own</string>
    <string name="donation">Donation</string>
    <string name="my_charity">My Charity</string>
    <string name="start_a_charity">Start a Charity</string>
    <string name="complete_your_personal_information_to_proceed_this_charity_program">Complete your personal information to proceed this charity program</string>
    <string name="upload_a_photo_as_a_thumbnail">Upload a photo as a thumbnail</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="description">Description</string>
    <string name="publish_now">Publish Now</string>
    <string name="email_address">Email address</string>
    <string name="profile">Profile</string>
    <string name="paymentmethod">Payment method</string>
    <string name="help_and_support">Help and support</string>
    <string name="logout">Logout</string>
    <string name="active_block_users">Active/Block users</string>
    <string name="your_profession">Your Profession</string>
    <string name="name_of_institution">Name of Institution</string>
    <string name="social_media_account">Social Media Account</string>
    <string name="address">Address</string>
    <string name="title_for_this_program">Title for This Program</string>
    <string name="who_are_the_benefit_recipients">Who are the benefit recipients</string>
    <string name="deadline">Deadline</string>
    <string name="previous">Previous</string>
    <string name="explore">Explore</string>
    <string name="choose_the_type_of_your_charity_program">Choose the type of your charity program</string>
    <string name="education">Education</string>
    <string name="health">Health</string>
    <string name="small_projects">Small Projects</string>
    <string name="home_renovation">Home Renovation</string>
    <string name="food">Food</string>
    <string name="Accept">Accept</string>
    <string name="delete">Delete</string>
    <string name="reject">Reject</string>
    <string name="successful">Successful!</string>
    <string name="your_charity_program_has_been_successfully_created_now_you_have_to_wait_admin_to_accept_your_program">Your charity program has been successfully created. Now you have to wait admin to accept your program</string>
    <string name="block_user">Block user</string>
    <string name="active_user">Active User</string>
    <string name="sign_in_nto_continue">Sign in to continue</string>
    <string name="total">Total</string>
    <string name="makereauset">Make Requset</string>
    <string name="emptfile">Please upload file</string>
</resources>