<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Actvities.UserBeneficiaryInfo">

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="full"
        android:textColor="#9BD35A"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView33"
        app:layout_constraintTop_toTopOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="24dp"
        android:text="Taka"
        android:textColor="#fff"
        android:textSize="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="60dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff">

            <EditText
                android:id="@+id/identiy"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/identity"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/background"
                android:textColorHint="#DEDEDE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/age"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/background"
                android:textColorHint="#DEDEDE"
                app:layout_constraintEnd_toEndOf="@+id/identiy"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/identiy"
                app:layout_constraintTop_toBottomOf="@+id/identiy" />

            <EditText
                android:id="@+id/familynum"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:background="@drawable/edit_text_background"
                android:hint="@string/number_of_your_family"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/background"
                android:textColorHint="#DEDEDE"
                app:layout_constraintEnd_toEndOf="@+id/age"
                app:layout_constraintStart_toStartOf="@+id/age"
                app:layout_constraintTop_toBottomOf="@+id/age" />


            <EditText
                android:id="@+id/salary"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/your_salary"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/background"

                android:textColorHint="#DEDEDE"
                app:layout_constraintEnd_toEndOf="@+id/familynum"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/familynum"
                app:layout_constraintTop_toBottomOf="@+id/familynum" />

            <android.widget.Button
                android:id="@+id/create_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_shape"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/job"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/background"
                android:hint="@string/your_job"
                android:textColorHint="#DEDEDE"
                android:background="@drawable/edit_text_background"

                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/salary"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="@+id/salary"
                app:layout_constraintTop_toBottomOf="@+id/salary" />

            <EditText
                android:id="@+id/status"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:background="@drawable/edit_text_background"

                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/background"
                android:hint="@string/social_status_good_mid_bad"
                android:textColorHint="#DEDEDE"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/job"
                app:layout_constraintStart_toStartOf="@+id/job"
                app:layout_constraintTop_toBottomOf="@+id/job" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>